--- a/site/manual.html
+++ b/site/manual.html
@@ -19,9 +19,7 @@
 <table><tr><td><strong>≡</strong></td><td>Navigate…</td></tr>
 <tr><td><br><strong>File▾</strong></td><td>Open…, Save…, <br>Import/Export to Markdown or GFM,<br>Take a snapshot, Show diff, <br>Set Page Size, Print</td></tr>
 <tr><td><br><strong>Doc▾</strong></td><td>Set Decimal, Font size, <br>Draft Mode, Print header, <br>Delete all comments</td></tr>
-<tr><td><figure><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M0 9a7.982 7.982 0 0 0 2.709 6l1.323-1.5a6 6 0 1 1 8.212-8.743L10.001 7h6V1l-2.343 2.343A8 8 0 0 0 .001 9z'/%3E%3C/svg%3E" class="figimg" alt="recalc">
-<figcaption>recalc</figcaption></figure>
-</td><td>Recalculate all</td></tr>
+<tr><td><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M0 9a7.982 7.982 0 0 0 2.709 6l1.323-1.5a6 6 0 1 1 8.212-8.743L10.001 7h6V1l-2.343 2.343A8 8 0 0 0 .001 9z'/%3E%3C/svg%3E" alt="recalc"> <code></code></td><td>Recalculate all</td></tr>
 <tr><td><figure></figure>
 </td><td>Undo, Redo</td></tr>
 <tr><td><strong>B</strong>  <strong><em>I</em></strong>  <img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='m9 11.5 1.5 1.5 5-5-5-5L9 4.5 12.5 8zM7 4.5 5.5 3l-5 5 5 5L7 11.5 3.5 8z'/%3E%3C/svg%3E" alt="embed"> <strong>X</strong><strong><sub>2</sub></strong>  <strong>X</strong><strong><sup>2</sup></strong> <img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='M16 8v1h-3.664c.43.602.664 1.292.664 2 0 1.107-.573 2.172-1.572 2.921C10.501 14.617 9.283 15 8 15s-2.501-.383-3.428-1.079C3.573 13.172 3 12.107 3 11h2c0 1.084 1.374 2 3 2s3-.916 3-2-1.374-2-3-2H0V8h4.68a3.003 3.003 0 0 1-.108-.079C3.573 7.172 3 6.107 3 5s.573-2.172 1.572-2.921C5.499 1.383 6.717 1 8 1s2.501.383 3.428 1.079C12.427 2.828 13 3.893 13 5h-2c0-1.084-1.374-2-3-2s-3 .916-3 2 1.374 2 3 2c1.234 0 2.407.354 3.32 1H16z'/%3E%3C/svg%3E" alt="strikethrough">  <strong><u>U</u></strong></td><td>Character styles:<br>Bold, Italic, Code, Subscript, Superscript, Strikethrough, Underline</td></tr>
