--- a/site/index.html
+++ b/site/index.html
@@ -66,7 +66,7 @@ bar hat vec harpoon dot ddot tilde
 a_subscript   b^exponent    x′
 (a+b) / (c+d)    1//2
 [1; 2; 3]    (a, b; c, d)
-[start..step..end] = ?
+[start:step:end...] = ?
 {a if b; c otherwise}
 Access:
   vector[number]
