Support one-liner if statement

--- a/site/manual.html
+++ b/site/manual.html
@@ -1054,6 +1054,10 @@ end</code></pre></dd>
 <dd><p>A <em>print</em> statement writes a message to the browser’s console. You can type <strong>Ctrl Shift I</strong> to see it. Such a message can be very useful while debugging a function.</p>
 <p><img src="images/print-railroad.svg" alt="print string"></p>
 </dd>
+<dt id='one-liner'>one-liner</dt>
+<dd><p>To make early returns less verbose, a one-liner <em>if</em> syntax is available:</p>
+<p><img src="images/one-liner-railroad.svg" alt="one liner"></p>
+</dd>
 </dl>
 <h4 id='startsvg'>startSvg</h4>
 <p>A user-defined function can also operate as a draw envronment. To initiate a draw environement, write the following line of code into a function:</p>
