--- a/site/index.html
+++ b/site/index.html
@@ -6,17 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hurmet.app</title>
   <link rel="icon" type="image/png" href="./images/favicon.png">
-  <link rel="stylesheet" href="/styles.min.css">
-  <script>const registerServiceWorker = async () => {
-    if ("serviceWorker" in navigator) {
-      try {
-        const registration = await navigator.serviceWorker.register("/sw.js", { scope: "/", })
-      } catch (error) {
-        console.error(`Registration failed with ${error}`)
-      }
-    }
-  }
-  registerServiceWorker();</script>
+  <link rel="stylesheet" href="./styles.min.css">
   <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
 </head>
 
@@ -79,7 +69,7 @@ Display:
 
 <div id="copyright">Copyright © 2020-2023 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
-<script type="module" src="/prosemirror.min.js"></script>
+<script type="module" src="./prosemirror.min.js"></script>
 <script>
   window.addEventListener('beforeunload', function (e) {
 	// If changes have been made, put up a dialog box to warn the user.
