--- a/site/manual.html
+++ b/site/manual.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Hurmet Manual</title>
    <link rel="icon" type="image/png" href="./images/favicon.png">
-   <link rel="stylesheet" href="/docStyles.min.css">
+   <link rel="stylesheet" href="./docStyles.min.css">
 </head>
 <body>
 <main>
