Revise build dependencies

--- a/site/manual.html
+++ b/site/manual.html
@@ -143,7 +143,7 @@ print &quot;Hi!&quot;</code></pre></td></tr>
 </div>
 <dt id='multiplication'>Multiplication</dt>
 <dd><p>Hurmet accepts several multiplication syntaxes. If <math><mrow><mi>a</mi><mo>=</mo></mrow><mrow><mn>7.1</mn></mrow></math>, then the following all give the same result:</p>
-<div class="indented"><p><math><mrow><mn>2</mn><mo>×</mo></mrow><mrow><mn>7.1</mn></mrow></math><br><math><mrow><mn>2</mn><mo>*</mo></mrow><mrow><mn>7.1</mn></mrow></math><br><math><mrow><mn>2</mn><mo>⋅</mo></mrow><mrow><mn>7.1</mn></mrow></math><br><math><mrow><mn>2</mn><mspace width="0.1667em"></mspace><mi>a</mi></mrow></math><br><math><mrow><mo form="prefix" stretchy="false">(</mo><mn>2</mn><mo form="postfix" stretchy="false">)</mo><mo form="prefix" stretchy="false">(</mo><mn>7.1</mn><mo form="postfix" stretchy="false">)</mo></mrow></math></p>
+<div class="indented"><p><math><mrow><mn>2</mn><mo>×</mo></mrow><mrow><mn>7.1</mn></mrow></math><br><math><mrow><mn>2</mn><mo>*</mo></mrow><mrow><mn>7.1</mn></mrow></math><br><math><mrow><mn>2</mn><mo>⋅</mo></mrow><mrow><mn>7.1</mn></mrow></math><br><math><mrow><mn>2</mn><mo>∘</mo></mrow><mrow><mn>7.1</mn></mrow></math><br><math><mrow><mn>2</mn><mspace width="0.1667em"></mspace><mi>a</mi></mrow></math><br><math><mrow><mo form="prefix" stretchy="false">(</mo><mn>2</mn><mo form="postfix" stretchy="false">)</mo><mo form="prefix" stretchy="false">(</mo><mn>7.1</mn><mo form="postfix" stretchy="false">)</mo></mrow></math></p>
 </div><p>To obtain the character <math><mo>×</mo></math>, type xx and hit the space bar. Auto-correct will give you an <math><mo>×</mo></math>.</p>
 <p>A space between variables acts as a multiplication operator.</p>
 </dd>
