--- a/site/manual.html
+++ b/site/manual.html
@@ -590,12 +590,18 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <tr><td><code>&quot;s1&quot;*&quot;s2&quot;</code></td><td>Concatenation of strings</td></tr>
 <tr><td>×</td><td> 2 × 4</td><td>Multiplication of numbers.<br>Cross product of three-vectors.<br>auto-correct: <strong>xx</strong></td></tr>
 <tr><td>·</td><td><span class='hurmet-calc' data-entry='a ⋅ b'><math><mrow><mi>a</mi><mo>⋅</mo></mrow><mrow><mi>b</mi></mrow></math></span></td><td>Multiplication of numbers.<br>Dot product of vectors or matrices.<br>auto-correct: dot between two spaces.</td></tr>
-<tr><td></td><td><span class='hurmet-calc' data-entry='(2)(4)'><math><mrow><mo form="prefix" stretchy="false">(</mo><mn>2</mn><mo form="postfix" stretchy="false">)</mo><mo form="prefix" stretchy="false">(</mo><mn>4</mn><mo form="postfix" stretchy="false">)</mo></mrow></math></span></td><td>Multiplication</td></tr>
-<tr><td></td><td> <code>a b</code></td><td>Multiplication. (A space acts as an operator when between variables.)</td></tr>
-<tr><td></td><td><span class='hurmet-calc' data-entry='2 a'><math><mrow><mn>2</mn><mspace width="0.1667em"></mspace><mi>a</mi></mrow></math></span></td><td>Multiplication</td></tr>
-<tr><td></td><td><span class='hurmet-calc' data-entry='a2'><math><mrow><mrow><mi mathvariant="normal">a</mi></mrow><mn>2</mn></mrow></math></span></td><td>Not a multiplication if no space.<br>Hurmet reads “a2” as an identifier.</td></tr>
-<tr><td></td><td><span class='hurmet-calc' data-entry='sin(2)'><math><mrow><mrow><mi>sin</mi><mo>⁡</mo></mrow><mo form="prefix" stretchy="false">(</mo><mn>2</mn><mo form="postfix" stretchy="false">)</mo></mrow></math></span></td><td>Function</td></tr>
-<tr><td></td><td>a (2)</td><td>Multiplication if a space exists before the open paren.</td></tr>
+<tr><td><p></p>
+</td><td><span class='hurmet-calc' data-entry='(2)(4)'><math><mrow><mo form="prefix" stretchy="false">(</mo><mn>2</mn><mo form="postfix" stretchy="false">)</mo><mo form="prefix" stretchy="false">(</mo><mn>4</mn><mo form="postfix" stretchy="false">)</mo></mrow></math></span></td><td>Multiplication</td></tr>
+<tr><td><p></p>
+</td><td> <code>a b</code></td><td>Multiplication. (A space acts as an operator when between variables.)</td></tr>
+<tr><td><p></p>
+</td><td><span class='hurmet-calc' data-entry='2 a'><math><mrow><mn>2</mn><mspace width="0.1667em"></mspace><mi>a</mi></mrow></math></span></td><td>Multiplication</td></tr>
+<tr><td><p></p>
+</td><td><span class='hurmet-calc' data-entry='a2'><math><mrow><mrow><mi mathvariant="normal">a</mi></mrow><mn>2</mn></mrow></math></span></td><td>Not a multiplication if no space.<br>Hurmet reads “a2” as an identifier.</td></tr>
+<tr><td><p></p>
+</td><td><span class='hurmet-calc' data-entry='sin(2)'><math><mrow><mrow><mi>sin</mi><mo>⁡</mo></mrow><mo form="prefix" stretchy="false">(</mo><mn>2</mn><mo form="postfix" stretchy="false">)</mo></mrow></math></span></td><td>Function</td></tr>
+<tr><td><p></p>
+</td><td>a (2)</td><td>Multiplication if a space exists before the open paren.</td></tr>
 <tr><td>/</td><td><span class='hurmet-calc' data-entry='8/2'><math><mstyle displaystyle="true" scriptlevel="0"><mfrac><mn>8</mn><mn>2</mn></mfrac></mstyle></math></span></td><td>Division</td></tr>
 <tr><td>//</td><td><span class='hurmet-calc' data-entry='8//2'><math><mstyle displaystyle="false" scriptlevel="0"><mfrac><mn>8</mn><mn>2</mn></mfrac></mstyle></math></span></td><td>Case fraction</td></tr>
 <tr><td>///</td><td><span class='hurmet-calc' data-entry='8///2'><math><mrow><mn>8</mn><mo lspace="0em" rspace="0em">⁄</mo></mrow><mrow><mn>2</mn></mrow></math></span></td><td>Division displayed inline</td></tr>
@@ -615,10 +621,14 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <tr><td><span class='hurmet-calc' data-entry='(n\atop k)'><math><mrow><mo fence="true" form="prefix">(</mo><mfrac linethickness="0px"><mi>n</mi><mi>k</mi></mfrac><mo fence="true" form="postfix">)</mo></mrow></math></span></td><td>(5 \atop 3)</td><td>Binomial coefficient. <span class='hurmet-calc' data-entry='(n \atop k) = n!//(n!(n!-k!))'><math><mrow><mrow><mo fence="true" form="prefix">(</mo><mfrac linethickness="0px"><mi>n</mi><mi>k</mi></mfrac><mo fence="true" form="postfix">)</mo></mrow><mo>=</mo></mrow><mrow><mstyle displaystyle="false" scriptlevel="0"><mfrac><mrow><mi>n</mi><mo form="postfix" stretchy="false">!</mo></mrow><mrow><mi>n</mi><mo form="postfix" stretchy="false">!</mo><mo form="prefix" stretchy="false">(</mo><mi>n</mi><mo form="postfix" stretchy="false">!</mo><mo>−</mo><mi>k</mi><mo form="postfix" stretchy="false">!</mo><mo form="postfix" stretchy="false">)</mo></mrow></mfrac></mstyle></mrow></math></span></td></tr>
 <tr><td>==</td><td><span class='hurmet-calc' data-entry='x == 15'><math><mrow><mi>x</mi><mo>⩵</mo></mrow><mrow><mn>15</mn></mrow></math></span></td><td>Equality comparison</td></tr>
 <tr><td>≠ !=</td><td><span class='hurmet-calc' data-entry='if b ≠ c'><math><mrow><mrow><mspace width="0.2778em"></mspace><mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">f</mi></mrow></mrow><mspace width="0.2778em"></mspace></mrow><mi>b</mi><mo>≠</mo></mrow><mrow><mi>c</mi></mrow></math></span></td><td>Inequality comparison<br>auto-correct:  &lt;&gt;</td></tr>
-<tr><td><code>&lt;</code></td><td></td><td>Less than comparison</td></tr>
-<tr><td><code>&gt;</code></td><td></td><td>Greater than comparison</td></tr>
-<tr><td>≤</td><td></td><td>auto-correct: &lt;=</td></tr>
-<tr><td>≥</td><td></td><td>auto-correct: &gt;=</td></tr>
+<tr><td><code>&lt;</code></td><td><p></p>
+</td><td>Less than comparison</td></tr>
+<tr><td><code>&gt;</code></td><td><p></p>
+</td><td>Greater than comparison</td></tr>
+<tr><td>≤</td><td><p></p>
+</td><td>auto-correct: &lt;=</td></tr>
+<tr><td>≥</td><td><p></p>
+</td><td>auto-correct: &gt;=</td></tr>
 <tr><td>∈<br>in</td><td><span class='hurmet-calc' data-entry='c ∈ s'><math><mrow><mi>c</mi><mo>∈</mo></mrow><mrow><mi>s</mi></mrow></math></span> <br><span class='hurmet-calc' data-entry='c in s'><math><mrow><mi>c</mi><mrow><mspace width="0.2778em"></mspace><mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">n</mi></mrow></mrow><mspace width="0.2778em"></mspace></mrow><mi>s</mi></mrow></math></span></td><td>Is an element of a matrix or<br>is a character of a string, or<br>is a property of a data frame.<br>auto-correct: \in</td></tr>
 <tr><td>∋</td><td><span class='hurmet-calc' data-entry='d ∋ p'><math><mrow><mi>d</mi><mo>∋</mo></mrow><mrow><mi>p</mi></mrow></math></span></td><td>d has a property named y<br>auto-correct: owns</td></tr>
 <tr><td>∉</td><td><span class='hurmet-calc' data-entry='c ∉ s'><math><mrow><mi>c</mi><mo>∉</mo></mrow><mrow><mi>s</mi></mrow></math></span></td><td>Is not an element of<br>auto-correct: \notin</td></tr>
@@ -627,7 +637,8 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <tr><td>⊈</td><td><span class='hurmet-calc' data-entry='c ⊈ s'><math><mrow><mi>c</mi><mo>⊈</mo></mrow><mrow><mi>s</mi></mrow></math></span></td><td>Is not a subset of<br> auto-correct: \nsubseteq</td></tr>
 <tr><td>and<br>&amp;&amp;<br>∧</td><td>if <em>a</em> and <em>b</em><br>if <em>a</em> &amp;&amp; <em>b</em><br>if <em>a</em> ∧ <em>b</em></td><td>Logical and</td></tr>
 <tr><td>or<br>||<br>∨</td><td>if <em>a</em> or <em>b</em><br>if <em>a</em> || <em>b</em><br>if <em>a</em> ∨ <em>b</em></td><td>Logical or</td></tr>
-<tr><td>⊻</td><td></td><td>Logical xor</td></tr>
+<tr><td>⊻</td><td><p></p>
+</td><td>Logical xor</td></tr>
 <tr><td>¬<br>!</td><td> if ¬ <em>a</em><br> if !a</td><td>Logical not</td></tr>
 <tr><td>:</td><td>𝐕[2:3] <br>for <em>i</em> in 1:3</td><td> Range separator</td></tr>
 </table>
