Separate Hurmet from Prosemirror

--- a/site/examples.html
+++ b/site/examples.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="./images/favicon.svg"/>
   <link rel="stylesheet" href="./styles.min.css">
   <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
+  <script src="hurmet.min.js"></script>
 </head>
 
 <body>
