--- a/site/manual.html
+++ b/site/manual.html
@@ -6,6 +6,7 @@
    <title>Hurmet Manual</title>
    <link rel="icon" href="./images/favicon.svg"/>
    <link rel="stylesheet" href="./docStyles.min.css">
+   <script src="hurmet.min.js"></script>
 </head>
 <body>
 <main>
@@ -1383,12 +1384,12 @@ end</code></pre><p>A Hurmet document can load an entire module into one variable
   </div>
 </div>
 <div id="demo">
-<p>format = "<input type="text" id="formatBox" value="h3" onchange="updateFormat()" style="width: 2em;">"</p>
+<p>format = "<input type="text" id="formatBox" value="h3" style="width: 2em;">"</p>
 <p></p>
 <div>Give it a try. (It’s interactive.)</div>
 <div id="input-container"><form><div id="demo-input"></div></form></div>
 <div id="demo-output"></div>
 </div> <!-- demo -->
-<script type="module" src="./demo.min.js"></script>
+<script src="./demo.min.js"></script>
 </body>
 </html>
